# targetpipe

./: Makefile  README.md  README.txt  setup.cfg  setup.py
adc2pe/: adc2pe_1000.npy  adc2pe_1000.tcal  adc2pe_1000gm.npy  adc2pe_1000gm.tcal  adc2pe_1100.npy  adc2pe_1100.tcal  adc2pe_800.npy  adc2pe_800.tcal  adc2pe_800gm.npy  adc2pe_800gm.tcal  adc2pe_800gm_c1.tcal  adc2pe_900.npy  adc2pe_900.tcal  adc2pe_900gm.npy  adc2pe_900gm.tcal  ff.tcal
scripts/: analyse_timing.py  calculate_gain_matching.py  compare_pedestals.py  compare_r0_r1.py  compare_spe_fit_postcal.py  compare_tf.py  create_event_gif.py  create_hillas_histograms.py  create_pulse_config.py  create_run_gif.py  extract_adc2pe.py  extract_adc2pe_at_hv.py  extract_adc2pe_residuals.py  extract_charge_vs_run.py  extract_dl1.py  extract_gain_vs_hv.py  extract_pulse_spectrum.py  extract_pulse_spectrum_new.py  extract_rms.py  extract_rms_runavg.py  extract_spe.py  filter_wheel.py  filter_wheel_armelle.py  filter_wheel_justus.py  generate_flat_field.py  generate_pedestal.py  generate_tf.py  generate_toy_waveforms.py  get_min_max_sample.py  illumination_geometry.py  loop_through_file.py  plot_adc2pe_residuals.py  plot_adc2pe_vs_hv.py  plot_adc_drift.py  plot_calibration_steps.py  plot_dynamic_range.py  plot_events.py  plot_images.py  plot_peak_time.py  plot_pedestal.py  (+24 more)
scripts/ac_tf/: check_tc_implementation.py  core.py  create_tf.py  extract_pedestal_samples.py  extract_pixel.py  plot_hits.py  plot_io.py  plot_pedestal.py  plot_residuals.py  plot_rms.py  plot_tf.py  plot_tfinput.py  tf.py  tf_files_baseline.py
(+121 files in other folders)
