[tool:pytest]
minversion=3.0
norecursedirs=build docs/_build
addopts = -v


[aliases]
test=pytest


[metadata]
package_name = targetpipe
version = 1.0.0
description = TARGET - CTA Python pipeline interface
author = Jason Watson
author_email = jason.watson@physics.ox.ac.uk
license = BSD3

[pep8]
exclude=build

[flake8]
exclude=build